--- a/html/home.html
+++ b/html/home.html
@@ -1,30 +1,49 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Course Marketplace</title>
-    <link rel="stylesheet" href="../css/style.css">
-</head>
-<body>
+    <link rel="stylesheet" href="../css/style.css" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined"
+      rel="stylesheet"
+    />
+    <!-- <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" /> -->
+  </head>
+  <body>
     <header>
-        <nav>
-            <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">Courses</a></li>
-                <li><a href="#">About</a></li>
-                <li><a href="#">Contact</a></li>
-            </ul>
-        </nav>
+      <nav>
+        <ul>
+          <li>YourDemy</li>
+          <li><a href="#">Categories</a></li>
+          <div class="search-container">
+            <input type="text" placeholder="Search.." name="search" />
+          </div>
+          <div class="right-items">
+            <li>
+              <a href="#">Interactive Mode</a>
+              <span class="material-symbols-outlined"> toggle_off </span>
+            </li>
+            <li>
+              <span class="material-symbols-outlined"> shopping_cart </span>
+            </li>
+            <li><a href="#">Login</a></li>
+            <li><a href="#">Sign Up</a></li>
+          </div>
+        </ul>
+      </nav>
     </header>
-
+    <div class="banner-container">
+      <div class="banner-image"></div>
+    </div>
     <section class="featured-courses">
-        <h2>Featured Courses</h2>
-        <div id="courses-list">
-            <!-- Courses will be loaded by JavaScript -->
-        </div>
+      <h2>Featured Courses</h2>
+      <div id="courses-list"></div>
     </section>
-
+    <footer>
+        All rights reserved
+    </footer>
     <script src="../js/script.js"></script>
-</body>
+  </body>
 </html>
