--- a/html/home.html
+++ b/html/home.html
@@ -28,7 +28,7 @@
             <li>
               <span class="material-symbols-outlined"> shopping_cart </span>
             </li>
-            <li><a href="#">Login</a></li>
+            <li><a href="login.html">Login</a></li>
             <li><a href="#">Sign Up</a></li>
           </div>
         </ul>
