--- a/html/home.html
+++ b/html/home.html
@@ -15,7 +15,7 @@
     <header>
       <nav>
         <ul>
-          <li>YourDemy</li>
+          <li><a href="/home">YourDemy</a></li>
           <li><a href="#">Categories</a></li>
           <div class="search-container">
             <input type="text" placeholder="Search.." name="search" />
