--- a/html/home.html
+++ b/html/home.html
@@ -29,7 +29,7 @@
               <span class="material-symbols-outlined"> shopping_cart </span>
             </li>
             <li><a href="login.html">Login</a></li>
-            <li><a href="#">Sign Up</a></li>
+            <li><a href="signup.html">Sign Up</a></li>
           </div>
         </ul>
       </nav>
