Added the feedback page and made some CSS changes, linked the feedback page with Categories for now

--- a/html/login.html
+++ b/html/login.html
@@ -15,7 +15,7 @@
         <nav>
           <ul>
             <li><a href="/home">YourDemy</a></li>
-            <li><a href="#">Categories</a></li>
+            <li><a href="feedback.html">Categories</a></li>
             <div class="search-container">
               <input type="text" placeholder="Search.." name="search" />
             </div>
