--- a/html/home.html
+++ b/html/home.html
@@ -15,19 +15,20 @@
     <header>
       <nav>
         <ul>
-          <li><a href="/home">YourDemy</a></li>
+          <li><a href="home.html">YourDemy</a></li>
           <li><a href="feedback.html">Categories</a></li>
           <div class="search-container">
             <input type="text" placeholder="Search.." name="search" />
           </div>
           <div class="right-items">
-            <li>
-              <a href="#">Interactive Mode</a>
+            <li id="interactive-mode">
+              <a >Interactive Mode</a>
               <span class="material-symbols-outlined"> toggle_off </span>
             </li>
             <li>
               <span class="material-symbols-outlined"> shopping_cart </span>
             </li>
+            <span id="userid">
             <li><a href="login.html">Login</a></li>
             <li><a href="signup.html">Sign Up</a></li>
           </div>
