--- a/html/home.html
+++ b/html/home.html
@@ -16,7 +16,7 @@
       <nav>
         <ul>
           <li><a href="home.html">YourDemy</a></li>
-          <li><a href="feedback.html">Categories</a></li>
+          <li><a href="feedback.html">Feedback</a></li>
           <div class="search-container">
             <input type="text" placeholder="Search.." name="search" />
           </div>
@@ -39,7 +39,7 @@
       <div class="banner-image"></div>
     </div>
     <section class="featured-courses">
-      <h2>Featured Courses</h2>
+      <h1>Featured Courses</h1>
       <div id="courses-list"></div>
     </section>
     <footer>
