--- a/html/course.html
+++ b/html/course.html
@@ -16,7 +16,7 @@
       <nav>
         <ul>
             <li><a href="home.html">YourDemy</a></li>
-          <li><a href="#">Categories</a></li>
+          <li><a href="#">Feedback</a></li>
           <div class="search-container">
             <input type="text" placeholder="Search.." name="search" />
           </div>
