--- a/html/login.html
+++ b/html/login.html
@@ -12,28 +12,29 @@
 </head>
 <body>
     <header>
-        <nav>
-          <ul>
-            <li><a href="/home">YourDemy</a></li>
-            <li><a href="feedback.html">Categories</a></li>
-            <div class="search-container">
-              <input type="text" placeholder="Search.." name="search" />
-            </div>
-            <div class="right-items">
-              <li>
-                <a href="#">Interactive Mode</a>
-                <span class="material-symbols-outlined"> toggle_off </span>
-              </li>
-              <li>
-                <span class="material-symbols-outlined"> shopping_cart </span>
-              </li>
-              <li><a href="login.html">Login</a></li>
-              <li><a href="signup.html">Sign Up</a></li>
-            </div>
-          </ul>
-        </nav>
+      <nav>
+        <ul>
+          <li><a href="home.html">YourDemy</a></li>
+          <li><a href="feedback.html">Feedback</a></li>
+          <div class="search-container">
+            <input type="text" placeholder="Search.." name="search" />
+          </div>
+          <div class="right-items">
+            <li id="interactive-mode">
+              <a >Interactive Mode</a>
+              <span class="material-symbols-outlined"> toggle_off </span>
+            </li>
+            <li>
+              <span class="material-symbols-outlined"> shopping_cart </span>
+            </li>
+            <span id="userid">
+            <li><a href="login.html">Login</a></li>
+            <li><a href="signup.html">Sign Up</a></li>
+          </div>
+        </ul>
+      </nav>
       </header>
-    <div class="container">
+    <div class="container login">
         <h2>Login to YourDemy</h2>
         <form id="login-form">
             <input type="email" id="email" placeholder="Email" required>
