--- a/html/course.html
+++ b/html/course.html
@@ -15,21 +15,22 @@
     <header>
       <nav>
         <ul>
-            <li><a href="home.html">YourDemy</a></li>
-          <li><a href="#">Feedback</a></li>
+          <li><a href="home.html">YourDemy</a></li>
+          <li><a href="feedback.html">Feedback</a></li>
           <div class="search-container">
             <input type="text" placeholder="Search.." name="search" />
           </div>
           <div class="right-items">
-            <li>
-              <a href="#">Interactive Mode</a>
+            <li id="interactive-mode">
+              <a >Interactive Mode</a>
               <span class="material-symbols-outlined"> toggle_off </span>
             </li>
             <li>
               <span class="material-symbols-outlined"> shopping_cart </span>
             </li>
-            <li><a href="#">Login</a></li>
-            <li><a href="#">Sign Up</a></li>
+            <span id="userid">
+            <li><a href="login.html">Login</a></li>
+            <li><a href="signup.html">Sign Up</a></li>
           </div>
         </ul>
       </nav>
@@ -53,6 +54,7 @@
                     <p>Q&A</p>
                     <p>Announcements</p>
             </div>
+            <div class="content">
             <div>
                 <h3>About this Course</h3>
 
@@ -96,7 +98,8 @@ This is going to be a long journey, but passing the AWS Certified Solutions Arch
 
                 </p>
             </div>
-        </div>
+            </div>
+          </div>
         
       </div>
       <div class="sidebar">
