--- a/html/home.html
+++ b/html/home.html
@@ -15,12 +15,13 @@
     <header>
       <nav>
         <ul>
-          <li><a href="home.html">YourDemy</a></li>
+          <li><a href="home.html" style="color: blueviolet; font-size: 30px;">YourDemy</a></li>
           <li><a href="feedback.html">Feedback</a></li>
-          <div class="search-container">
+          <li class="search-container">
             <input type="text" placeholder="Search.." name="search" />
-          </div>
-          <div class="right-items">
+          </li>
+          <li>
+          <span class="right-items">
             <li id="interactive-mode">
               <a >Interactive Mode</a>
               <span class="material-symbols-outlined"> toggle_off </span>
@@ -31,7 +32,8 @@
             <span id="userid">
             <li><a href="login.html">Login</a></li>
             <li><a href="signup.html">Sign Up</a></li>
-          </div>
+          </span>
+        </li>
         </ul>
       </nav>
     </header>
