Fixed the W3 issues

--- a/html/feedback.html
+++ b/html/feedback.html
@@ -38,10 +38,10 @@
         <h2>Feedback Form</h2>
         <form action="submit_feedback.php" method="post">
             <label for="videoLength">Were the options provided for video chunk length suitable for the course?</label><br>
-            <input type="radio" id="yes" name="videoLength" value="Yes">
-            <label for="yes">Yes</label>
-            <input type="radio" id="no" name="videoLength" value="No">
-            <label for="no">No</label><br><br>
+            <input type="radio" id="yes_videoLength" name="videoLength" value="Yes">
+            <label for="yes_videoLength">Yes</label>
+            <input type="radio" id="no_videoLength" name="videoLength" value="No">
+            <label for="no_videoLength">No</label><br><br>
             
             <label for="options">If no, what options would you like to have?</label><br>
             <select id="options" name="options">
@@ -53,10 +53,10 @@
             </select><br><br>
 
             <label for="quizOptions">Were the options for suitable for you?</label><br>
-            <input type="radio" id="yes" name="videoLength" value="Yes">
-            <label for="yes">Yes</label>
-            <input type="radio" id="no" name="videoLength" value="No">
-            <label for="no">No</label><br><br>
+            <input type="radio" id="yes_quizOptions" name="quizOptions" value="Yes">
+            <label for="yes_quizOptions">Yes</label>
+            <input type="radio" id="no_quizOptions" name="quizOptions" value="No">
+            <label for="no_quizOptions">No</label><br><br>
 
             <label for="options">If no, what options would you like to have?</label><br>
             <select id="options" name="options">
