--- a/html/signup.html
+++ b/html/signup.html
@@ -50,7 +50,7 @@
             margin-bottom: 30px;
           "
         >
-          <label  id="interactiveMode">Interactive Mode</label>
+          <label  id="interactiveModeLabel">Interactive Mode</label>
           <input
             style="width: fit-content; margin-top: auto; margin-bottom: auto"
             type="radio"
