--- a/html/home.html
+++ b/html/home.html
@@ -15,25 +15,28 @@
     <header>
       <nav>
         <ul>
-          <li><a href="home.html" style="color: blueviolet; font-size: 30px;">YourDemy</a></li>
+          <li>
+            <a href="home.html" style="color: blueviolet; font-size: 30px">YourDemy</a>
+          </li>
           <li><a href="feedback.html">Feedback</a></li>
           <li class="search-container">
             <input type="text" placeholder="Search.." name="search" />
           </li>
-          <li>
-          <span class="right-items">
-            <li id="interactive-mode">
-              <a >Interactive Mode</a>
-              <span class="material-symbols-outlined"> toggle_off </span>
-            </li>
-            <li>
-              <span class="material-symbols-outlined"> shopping_cart </span>
-            </li>
-            <span id="userid">
-            <li><a href="login.html">Login</a></li>
-            <li><a href="signup.html">Sign Up</a></li>
-          </span>
-        </li>
+          <li style="width: 20%">
+            <span class="right-items">
+              <li id="interactive-mode">
+                <a>Interactive Mode</a>
+                <span class="material-symbols-outlined"> toggle_off </span>
+              </li>
+              <li>
+                <span class="material-symbols-outlined"> shopping_cart </span>
+              </li>
+              <span id="userid">
+                <li><a href="login.html">Login</a></li>
+                <li><a href="signup.html">Sign Up</a></li>
+              </span>
+            </span>
+          </li>
         </ul>
       </nav>
     </header>
@@ -44,9 +47,7 @@
       <h1>Featured Courses</h1>
       <div id="courses-list"></div>
     </section>
-    <footer>
-        All rights reserved
-    </footer>
+    <footer>All rights reserved</footer>
     <script src="../js/script.js"></script>
   </body>
 </html>
