--- a/html/signup.html
+++ b/html/signup.html
@@ -14,23 +14,28 @@
     <header>
       <nav>
         <ul>
-          <li><a href="home.html">YourDemy</a></li>
+          <li>
+            <a href="home.html" style="color: blueviolet; font-size: 30px">YourDemy</a>
+          </li>
           <li><a href="feedback.html">Feedback</a></li>
-          <div class="search-container">
+          <li class="search-container">
             <input type="text" placeholder="Search.." name="search" />
-          </div>
-          <div class="right-items">
-            <li id="interactive-mode">
-              <a >Interactive Mode</a>
-              <span class="material-symbols-outlined"> toggle_off </span>
-            </li>
-            <li>
-              <span class="material-symbols-outlined"> shopping_cart </span>
-            </li>
-            <span id="userid">
-            <li><a href="login.html">Login</a></li>
-            <li><a href="signup.html">Sign Up</a></li>
-          </div>
+          </li>
+          <li style="width: 20%">
+            <span class="right-items">
+              <li id="interactive-mode">
+                <a>Interactive Mode</a>
+                <span class="material-symbols-outlined"> toggle_off </span>
+              </li>
+              <li>
+                <span class="material-symbols-outlined"> shopping_cart </span>
+              </li>
+              <span id="userid">
+                <li><a href="login.html">Login</a></li>
+                <li><a href="signup.html">Sign Up</a></li>
+              </span>
+            </span>
+          </li>
         </ul>
       </nav>
     </header>
