--- a/html/rewards.html
+++ b/html/rewards.html
@@ -12,26 +12,27 @@
 </head>
 <body>
     <header>
-        <nav>
-          <ul>
-            <li><a href="/home">YourDemy</a></li>
-            <li><a href="feedback.html">Categories</a></li>
-            <div class="search-container">
-              <input type="text" placeholder="Search.." name="search" />
-            </div>
-            <div class="right-items">
-              <li>
-                <a href="#">Interactive Mode</a>
-                <span class="material-symbols-outlined"> toggle_off </span>
-              </li>
-              <li>
-                <span class="material-symbols-outlined"> shopping_cart </span>
-              </li>
-              <li><a href="login.html">Login</a></li>
-              <li><a href="signup.html">Sign Up</a></li>
-            </div>
-          </ul>
-        </nav>
+      <nav>
+        <ul>
+          <li><a href="home.html" style="color: blueviolet; font-size: 25px;">YourDemy</a></li>
+          <li><a href="feedback.html">Feedback</a></li>
+          <div class="search-container">
+            <input type="text" placeholder="Search.." name="search" />
+          </div>
+          <div class="right-items">
+            <li id="interactive-mode">
+              <a >Interactive Mode</a>
+              <span class="material-symbols-outlined"> toggle_off </span>
+            </li>
+            <li>
+              <span class="material-symbols-outlined"> shopping_cart </span>
+            </li>
+            <span id="userid">
+            <li><a href="login.html">Login</a></li>
+            <li><a href="signup.html">Sign Up</a></li>
+          </div>
+        </ul>
+      </nav>
       </header>
     <div class="rewards-container">
         <h2 class="rewards">My Rewards</h2>
